# fastapi-template-microservices

./: .env.dev  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements-dev.txt  requirements.txt
backend/app/: backend_pre_start.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  health.py
backend/app/api/v1/: __init__.py  clients.py  items.py  login.py  users.py
backend/app/core/: auth.py  config.py  consts.py  database.py  deps.py  middleware.py  security.py
backend/app/crud/: items.py  users.py
backend/app/models/: clients.py  items.py  users.py
backend/app/schemas/: base.py  clients.py  items.py  token.py  users.py
backend/app/services/: clients.py  crud.py  items.py
backend/docker/: backend.dockerfile  start.sh
backend/migrations/: env.py
backend/migrations/versions/: 2026_02_10_2052-ad4d52888664_add_users_table.py  2026_02_10_2057-4a512fe08a9f_add_items_table.py  2026_02_11_1812-0e8245ea77f6_add_users_table.py  2026_02_11_1814-13afcd0db878_add_items_table.py  2026_02_12_0216-b0f80f919016_add_client_table.py  2026_02_12_0220-8bcc9bf89fbd_add_item_table.py  2026_02_13_1750-f6f7aa29e6a5_add_client_table.py  2026_02_13_1752-5583a2d9ea90_add_item_table.py  2026_02_13_1849-cdf9cf7ec66d_add_client_table.py  2026_02_13_1850-23c4ddbede06_add_item_table.py  2026_04_07_1543-9efd6b437825_add_clients_table.py  2026_04_07_1544-cc3d71af4681_add_items_table.py
backend/scripts/: initial_data.py  prestart.sh  start.sh
backend/tests/: conftest.py  utils.py
backend/tests/api/: test_auth.py  test_clients.py  test_health.py  test_home.py  test_items.py  test_root.py
